[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/entities/stateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://game/entities/stateMachine/states/StateDead.gd" type="Script" id=2]
[ext_resource path="res://game/entities/stateMachine/states/Statelnvulnerable.gd" type="Script" id=3]
[ext_resource path="res://game/entities/Entity.gd" type="Script" id=4]
[ext_resource path="res://game/entities/stateMachine/states/StateAlive.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 5.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 5.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.54902, 0.0627451, 0.0627451, 1, 1, 1, 1, 1, 0.160784, 0.160784, 0.160784, 1, 1, 1, 1, 1 )

[node name="Entity" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.5 )
shape = SubResource( 1 )

[node name="ContactArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactArea"]
position = Vector2( 0, -7.5 )
shape = SubResource( 2 )

[node name="StateMachineLifecycle" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Alive" type="Node" parent="StateMachineLifecycle"]
script = ExtResource( 5 )

[node name="Invulnerable" type="Node" parent="StateMachineLifecycle"]
script = ExtResource( 3 )
modulate_gradient = SubResource( 3 )

[node name="Timer" type="Timer" parent="StateMachineLifecycle/Invulnerable"]
wait_time = 0.8
one_shot = true

[node name="Dead" type="Node" parent="StateMachineLifecycle"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="StateMachineLifecycle/Dead"]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )

[connection signal="body_entered" from="ContactArea" to="." method="_on_ContactArea_body_entered"]
[connection signal="body_exited" from="ContactArea" to="." method="_on_ContactArea_body_exited"]
[connection signal="timeout" from="StateMachineLifecycle/Invulnerable/Timer" to="StateMachineLifecycle/Invulnerable" method="_on_Timer_timeout"]
